Simpler serial monitor running

--- a/receiver/Makefile
+++ b/receiver/Makefile
@@ -6,6 +6,9 @@ TARGET := $(notdir $(CURDIR))
 # Set to 8000000L or 16000000L
 F_CPU := 16000000L
 
+# Serial monitor
+SERIAL_SPEED := 115200
+
 # Define Arduino version for libraries
 ARDUINO = 105
 
@@ -52,7 +55,7 @@ CORE_PATH = $(ARDUINO_PATH)/hardware/arduino/avr/cores/arduino
 VARIANT_PATH = $(ARDUINO_PATH)/hardware/arduino/avr/variants/standard
 
 # CPPFLAGS = compiler options for C and C++
-CPPFLAGS = -mmcu=atmega328p -g -Os -w -Wall -ffunction-sections -fdata-sections -DF_CPU=$(F_CPU) -Isrc -I$(CORE_PATH) -I$(CORE_PATH)/avr-libc -I$(VARIANT_PATH)
+CPPFLAGS = -mmcu=atmega328p -g -Os -w -Wall -ffunction-sections -fdata-sections -DF_CPU=$(F_CPU) -DSERIAL_SPEED=$(SERIAL_SPEED) -Isrc -I$(CORE_PATH) -I$(CORE_PATH)/avr-libc -I$(VARIANT_PATH)
 
 # compiler options for C++ only
 CXXFLAGS = -std=gnu++0x -felide-constructors -fno-exceptions -fno-rtti
@@ -106,8 +109,12 @@ upload: $(BUILDDIR)/$(TARGET).hex
 	avrdude -p atmega328p $(AVRDUDE_OPTIONS) -c arduino -P $(RECEIVER_SERIAL) -U flash:w:$(BUILDDIR)/$(TARGET).hex:i
 
 fuses:
-	@echo "No need to change the fuses on the receiver board."
-	@false
+	avrdude -p atmega328p $(AVRDUDE_OPTIONS) -c arduino -P $(RECEIVER_SERIAL) -U lfuse:w:0xFF:m -U hfuse:w:0xDE:m -U efuse:w:0x05:m
+
+monitor:
+	@echo "Serial monitor on $(RECEIVER_SERIAL)..."
+	@stty -F $(RECEIVER_SERIAL) cs8 $(SERIAL_SPEED) ignbrk -brkint -icrnl -imaxbel -opost -onlcr -isig -icanon -iexten -echo -echoe -echok -echoctl -echoke noflsh -ixon -crtscts
+	@cat $(RECEIVER_SERIAL)
 
 $(BUILDDIR)/%.o: %.c
 	@echo -e "[CC]\t$<"
